<resources>
    <string name="app_name" translatable="false">MM-Anime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">tetyconstantve@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">ANIME MANGA-MANHWA</string>
    <string name="menu_gallery">Privacy policy</string>
    <string name="menu_slideshow">About us</string>
    <string name="hint_btn_close">Fermer !</string>
    <string name="share_messageSave">Partager !</string>
    <string name="cancel">Cancel !</string>
    <string name="hint_share_panel">Community message !</string>
    <string name="soc_share_messageSave">Do you like video app to watch Teaser, Trailer, News about movies and series, there is %s application which includes all, install here -> \n %s</string>
    <string name="vos_manga_et_manhwa_en_stream">" Vos manga et manhwa en stream"</string>
    <string name="veuillez_activer_votre_acc_s_internet">Please enable your internet access or contact the developer. tetyconstantve@gmail.com</string>
    <string name="allez_sur_le_store">Go to the store!</string>
    <string name="plus_tard">Later!</string>
    <string name="vous_ne_pouvez_pas_continuer_sans_faire_de_mise_jour">You cannot continue without updating.</string>
    <string name="advertisement">Advertisement</string>
    <string name="vous_avez_la_derni_re_version_disponible_de_l_application">You have the latest version of the application available.</string>
    <string name="home">HOME</string>
    <string name="previous">PREVIOUS</string>
    <string name="reload">RELOAD</string>
    <string name="next">NEXT</string>
    <string name="abouts">ABOUTS</string>
    <string name="contacts">CONTACTS</string>
    <string name="exit">EXIT</string>
    <string name="contact_message">Hello, if you encounter a problem or have a concern to submit to the developer, please write to: tetyconstantve@gmail.com</string>
    <string name="contact_title">CONTACT US !</string>
    <string name="contact_btn">Let\'s continue</string>
    <string name="about_us">ABOUT US !</string>
    <string name="about_message">Discover our application designed to watch free Anime, Manga and Manhwa content!\nWe wish you good viewing.\nFor questions write to us: tetyconstantve@gmail.com</string>
    <string name="can_t_go_back">Cant go back</string>
    <string name="can_t_go_next">Cant go next</string>
    <string name="rotate_screen">Rotate screen</string>
    <string name="screen_rotated_to_landscape">Screen rotated to Landscape</string>
    <string name="screen_rotated_to_portrait">Screen rotated to portrait</string>
</resources>